Last commit of the day

--- a/test.ipynb
+++ b/test.ipynb
@@ -918,12 +918,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "posts = []\n",
-    "all_hot = reddit.subreddit('all')\n",
+    "all_hot = reddit.subreddit('AskReddit')\n",
     "for post in all_hot.hot(limit=3000):\n",
     "    posts.append([post.title, post.score, post.id, post.subreddit, post.url, post.num_comments, post.selftext, post.subreddit_name_prefixed, post.upvote_ratio, post.created])\n",
     "posts = pd.DataFrame(posts,columns=['title', 'score', 'id', 'subreddit', 'url', 'num_comments', 'body', 'subreddit_name_prefixed', 'upvote_ratio', 'created'])"
@@ -931,8 +931,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -970,68 +972,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Hugh Keays-Byrne, of Mad Max fame, dead at 73</td>\n",
-       "      <td>13735</td>\n",
-       "      <td>k5fkoh</td>\n",
-       "      <td>movies</td>\n",
-       "      <td>https://boingboing.net/2020/12/02/hugh-keays-b...</td>\n",
-       "      <td>507</td>\n",
-       "      <td></td>\n",
-       "      <td>r/movies</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>1.606964e+09</td>\n",
+       "      <td>Moratorium on questions related to US Politics</td>\n",
+       "      <td>70760</td>\n",
+       "      <td>j44ppb</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/j4...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Effective immediately until a further notice, ...</td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>1.601708e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>A kitten will always be kitten for a mother.</td>\n",
-       "      <td>18383</td>\n",
-       "      <td>k5f7ji</td>\n",
-       "      <td>aww</td>\n",
-       "      <td>https://v.redd.it/uzvz2r2lit261</td>\n",
-       "      <td>193</td>\n",
+       "      <td>What did that one teacher do to you that you'l...</td>\n",
+       "      <td>14526</td>\n",
+       "      <td>k5g9u6</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/k5...</td>\n",
+       "      <td>5438</td>\n",
        "      <td></td>\n",
-       "      <td>r/aww</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>1.606963e+09</td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>0.97</td>\n",
+       "      <td>1.606966e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>TIL Curry was introduced to Japan by the Briti...</td>\n",
-       "      <td>41743</td>\n",
-       "      <td>k5cmo1</td>\n",
-       "      <td>todayilearned</td>\n",
-       "      <td>http://www.wikipedia.org/wiki/curry</td>\n",
-       "      <td>1501</td>\n",
+       "      <td>If when you die, someone takes the VR headset ...</td>\n",
+       "      <td>70789</td>\n",
+       "      <td>k59290</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/k5...</td>\n",
+       "      <td>14110</td>\n",
        "      <td></td>\n",
-       "      <td>r/todayilearned</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>1.606956e+09</td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>1.606944e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[Charania] Los Angeles Lakers star LeBron Jame...</td>\n",
-       "      <td>11417</td>\n",
-       "      <td>k5e528</td>\n",
-       "      <td>nba</td>\n",
-       "      <td>https://twitter.com/shamscharania/status/13341...</td>\n",
-       "      <td>1448</td>\n",
+       "      <td>When did the full weight of the gravity of thi...</td>\n",
+       "      <td>1698</td>\n",
+       "      <td>k5icee</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/k5...</td>\n",
+       "      <td>1317</td>\n",
        "      <td></td>\n",
-       "      <td>r/nba</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>1.606960e+09</td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>1.606972e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Man checks Mayor where the city tax money is b...</td>\n",
-       "      <td>54741</td>\n",
-       "      <td>k5cc3g</td>\n",
-       "      <td>PublicFreakout</td>\n",
-       "      <td>https://v.redd.it/xm3u9kpcus261</td>\n",
-       "      <td>2612</td>\n",
+       "      <td>The Lockheed SR-71 \"Blackbird\", a Mach 3+ stra...</td>\n",
+       "      <td>1530</td>\n",
+       "      <td>k5evem</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/k5...</td>\n",
+       "      <td>494</td>\n",
        "      <td></td>\n",
-       "      <td>r/PublicFreakout</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>1.606955e+09</td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>1.606962e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1047,132 +1049,132 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2995</th>\n",
-       "      <td>I just got to Hutton orbital</td>\n",
-       "      <td>601</td>\n",
-       "      <td>k5ale4</td>\n",
-       "      <td>EliteDangerous</td>\n",
-       "      <td>https://www.reddit.com/r/EliteDangerous/commen...</td>\n",
-       "      <td>133</td>\n",
-       "      <td>I hate every single one of you.</td>\n",
-       "      <td>r/EliteDangerous</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>1.606949e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2996</th>\n",
-       "      <td>It's the end of times as foretold by the prophecy</td>\n",
-       "      <td>1791</td>\n",
-       "      <td>k58ll9</td>\n",
-       "      <td>Markiplier</td>\n",
-       "      <td>https://imgur.com/44TQSnZ.jpg</td>\n",
-       "      <td>14</td>\n",
+       "      <th>994</th>\n",
+       "      <td>What’s a thought/statement you had you believe...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>k5lesu</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/k5...</td>\n",
+       "      <td>2</td>\n",
        "      <td></td>\n",
-       "      <td>r/Markiplier</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.606942e+09</td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.606981e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2997</th>\n",
-       "      <td>Would you rather go to space or solve world hu...</td>\n",
-       "      <td>666</td>\n",
-       "      <td>k57jnt</td>\n",
-       "      <td>polls</td>\n",
-       "      <td>https://www.reddit.com/r/polls/comments/k57jnt...</td>\n",
-       "      <td>121</td>\n",
-       "      <td>\\n\\n[View Poll](https://www.reddit.com/poll/k5...</td>\n",
-       "      <td>r/polls</td>\n",
-       "      <td>0.97</td>\n",
-       "      <td>1.606937e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2998</th>\n",
-       "      <td>Malik Beasley This Off-Season</td>\n",
-       "      <td>314</td>\n",
-       "      <td>k5b58i</td>\n",
-       "      <td>timberwolves</td>\n",
-       "      <td>https://i.redd.it/lza38rw2ks261.jpg</td>\n",
-       "      <td>50</td>\n",
+       "      <th>995</th>\n",
+       "      <td>Men of Reddit who didn’t have fathers growing ...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>k5ftuf</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/k5...</td>\n",
+       "      <td>6</td>\n",
        "      <td></td>\n",
-       "      <td>r/timberwolves</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.606951e+09</td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>1.606965e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2999</th>\n",
-       "      <td>econony...</td>\n",
-       "      <td>228</td>\n",
-       "      <td>k5dd98</td>\n",
-       "      <td>coveryourselfinoil</td>\n",
-       "      <td>https://i.redd.it/rjjv7q4c3t261.jpg</td>\n",
-       "      <td>14</td>\n",
+       "      <th>996</th>\n",
+       "      <td>(Predictions) When do you think 'Rick Astley -...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>k5ftqp</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/k5...</td>\n",
+       "      <td>12</td>\n",
        "      <td></td>\n",
-       "      <td>r/coveryourselfinoil</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>1.606958e+09</td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>1.606965e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>If you could only listen to one song for the r...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>k5jmbn</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/k5...</td>\n",
+       "      <td>8</td>\n",
+       "      <td></td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.606976e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>How do you give a good blowie?</td>\n",
+       "      <td>3</td>\n",
+       "      <td>k5leho</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>https://www.reddit.com/r/AskReddit/comments/k5...</td>\n",
+       "      <td>16</td>\n",
+       "      <td></td>\n",
+       "      <td>r/AskReddit</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>1.606981e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3000 rows × 10 columns</p>\n",
+       "<p>999 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  title  score      id  \\\n",
-       "0         Hugh Keays-Byrne, of Mad Max fame, dead at 73  13735  k5fkoh   \n",
-       "1          A kitten will always be kitten for a mother.  18383  k5f7ji   \n",
-       "2     TIL Curry was introduced to Japan by the Briti...  41743  k5cmo1   \n",
-       "3     [Charania] Los Angeles Lakers star LeBron Jame...  11417  k5e528   \n",
-       "4     Man checks Mayor where the city tax money is b...  54741  k5cc3g   \n",
-       "...                                                 ...    ...     ...   \n",
-       "2995                       I just got to Hutton orbital    601  k5ale4   \n",
-       "2996  It's the end of times as foretold by the prophecy   1791  k58ll9   \n",
-       "2997  Would you rather go to space or solve world hu...    666  k57jnt   \n",
-       "2998                      Malik Beasley This Off-Season    314  k5b58i   \n",
-       "2999                                         econony...    228  k5dd98   \n",
+       "                                                 title  score      id  \\\n",
+       "0       Moratorium on questions related to US Politics  70760  j44ppb   \n",
+       "1    What did that one teacher do to you that you'l...  14526  k5g9u6   \n",
+       "2    If when you die, someone takes the VR headset ...  70789  k59290   \n",
+       "3    When did the full weight of the gravity of thi...   1698  k5icee   \n",
+       "4    The Lockheed SR-71 \"Blackbird\", a Mach 3+ stra...   1530  k5evem   \n",
+       "..                                                 ...    ...     ...   \n",
+       "994  What’s a thought/statement you had you believe...      3  k5lesu   \n",
+       "995  Men of Reddit who didn’t have fathers growing ...      7  k5ftuf   \n",
+       "996  (Predictions) When do you think 'Rick Astley -...      7  k5ftqp   \n",
+       "997  If you could only listen to one song for the r...      4  k5jmbn   \n",
+       "998                     How do you give a good blowie?      3  k5leho   \n",
        "\n",
-       "               subreddit                                                url  \\\n",
-       "0                 movies  https://boingboing.net/2020/12/02/hugh-keays-b...   \n",
-       "1                    aww                    https://v.redd.it/uzvz2r2lit261   \n",
-       "2          todayilearned                http://www.wikipedia.org/wiki/curry   \n",
-       "3                    nba  https://twitter.com/shamscharania/status/13341...   \n",
-       "4         PublicFreakout                    https://v.redd.it/xm3u9kpcus261   \n",
-       "...                  ...                                                ...   \n",
-       "2995      EliteDangerous  https://www.reddit.com/r/EliteDangerous/commen...   \n",
-       "2996          Markiplier                      https://imgur.com/44TQSnZ.jpg   \n",
-       "2997               polls  https://www.reddit.com/r/polls/comments/k57jnt...   \n",
-       "2998        timberwolves                https://i.redd.it/lza38rw2ks261.jpg   \n",
-       "2999  coveryourselfinoil                https://i.redd.it/rjjv7q4c3t261.jpg   \n",
+       "     subreddit                                                url  \\\n",
+       "0    AskReddit  https://www.reddit.com/r/AskReddit/comments/j4...   \n",
+       "1    AskReddit  https://www.reddit.com/r/AskReddit/comments/k5...   \n",
+       "2    AskReddit  https://www.reddit.com/r/AskReddit/comments/k5...   \n",
+       "3    AskReddit  https://www.reddit.com/r/AskReddit/comments/k5...   \n",
+       "4    AskReddit  https://www.reddit.com/r/AskReddit/comments/k5...   \n",
+       "..         ...                                                ...   \n",
+       "994  AskReddit  https://www.reddit.com/r/AskReddit/comments/k5...   \n",
+       "995  AskReddit  https://www.reddit.com/r/AskReddit/comments/k5...   \n",
+       "996  AskReddit  https://www.reddit.com/r/AskReddit/comments/k5...   \n",
+       "997  AskReddit  https://www.reddit.com/r/AskReddit/comments/k5...   \n",
+       "998  AskReddit  https://www.reddit.com/r/AskReddit/comments/k5...   \n",
        "\n",
-       "      num_comments                                               body  \\\n",
-       "0              507                                                      \n",
-       "1              193                                                      \n",
-       "2             1501                                                      \n",
-       "3             1448                                                      \n",
-       "4             2612                                                      \n",
-       "...            ...                                                ...   \n",
-       "2995           133                    I hate every single one of you.   \n",
-       "2996            14                                                      \n",
-       "2997           121  \\n\\n[View Poll](https://www.reddit.com/poll/k5...   \n",
-       "2998            50                                                      \n",
-       "2999            14                                                      \n",
+       "     num_comments                                               body  \\\n",
+       "0               2  Effective immediately until a further notice, ...   \n",
+       "1            5438                                                      \n",
+       "2           14110                                                      \n",
+       "3            1317                                                      \n",
+       "4             494                                                      \n",
+       "..            ...                                                ...   \n",
+       "994             2                                                      \n",
+       "995             6                                                      \n",
+       "996            12                                                      \n",
+       "997             8                                                      \n",
+       "998            16                                                      \n",
        "\n",
-       "     subreddit_name_prefixed  upvote_ratio       created  \n",
-       "0                   r/movies          0.96  1.606964e+09  \n",
-       "1                      r/aww          0.98  1.606963e+09  \n",
-       "2            r/todayilearned          0.95  1.606956e+09  \n",
-       "3                      r/nba          0.94  1.606960e+09  \n",
-       "4           r/PublicFreakout          0.92  1.606955e+09  \n",
-       "...                      ...           ...           ...  \n",
-       "2995        r/EliteDangerous          0.98  1.606949e+09  \n",
-       "2996            r/Markiplier          0.99  1.606942e+09  \n",
-       "2997                 r/polls          0.97  1.606937e+09  \n",
-       "2998          r/timberwolves          0.99  1.606951e+09  \n",
-       "2999    r/coveryourselfinoil          0.98  1.606958e+09  \n",
+       "    subreddit_name_prefixed  upvote_ratio       created  \n",
+       "0               r/AskReddit          0.84  1.601708e+09  \n",
+       "1               r/AskReddit          0.97  1.606966e+09  \n",
+       "2               r/AskReddit          0.86  1.606944e+09  \n",
+       "3               r/AskReddit          0.92  1.606972e+09  \n",
+       "4               r/AskReddit          0.96  1.606962e+09  \n",
+       "..                      ...           ...           ...  \n",
+       "994             r/AskReddit          1.00  1.606981e+09  \n",
+       "995             r/AskReddit          0.89  1.606965e+09  \n",
+       "996             r/AskReddit          0.82  1.606965e+09  \n",
+       "997             r/AskReddit          1.00  1.606976e+09  \n",
+       "998             r/AskReddit          0.72  1.606981e+09  \n",
        "\n",
-       "[3000 rows x 10 columns]"
+       "[999 rows x 10 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,11 +1185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "posts.to_csv('data/all3000.csv', sep='!', index=False)"
+    "posts.to_csv('data/askreddit999.csv', sep='!', index=False)"
    ]
   },
   {
