--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,12 +918,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "posts = []\n",
-    "all_hot = reddit.subreddit('AskReddit')\n",
+    "all_hot = reddit.subreddit('all')\n",
     "for post in all_hot.hot(limit=3000):\n",
     "    posts.append([post.title, post.score, post.id, post.subreddit, post.url, post.num_comments, post.selftext, post.subreddit_name_prefixed, post.upvote_ratio, post.created])\n",
     "posts = pd.DataFrame(posts,columns=['title', 'score', 'id', 'subreddit', 'url', 'num_comments', 'body', 'subreddit_name_prefixed', 'upvote_ratio', 'created'])"
@@ -933,7 +933,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1185,11 +1185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "posts.to_csv('data/askreddit999.csv', sep='!', index=False)"
+    "#posts.to_csv('data/all10000.csv', sep='!', index=False)"
    ]
   },
   {
@@ -1198,7 +1198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tester = pd.read_csv('data/all3000.csv', sep='!')"
+    "#tester = pd.read_csv('data/all3000.csv', sep='!')"
    ]
   },
   {
@@ -1452,7 +1452,7 @@
     }
    ],
    "source": [
-    "tester"
+    "#tester"
    ]
   },
   {
@@ -32832,6 +32832,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
